Update: Ubah nama aplikasi menjadi 'Sistem Pendukung Keputusan' dan hapus data dummy